--- a/location-size.css
+++ b/location-size.css
@@ -4,7 +4,7 @@ html, body {
     bottom:0;
     left:0;
     right:0;
-    background-image: url("./pics/car-home.PNG");
+    background-image: url("./pics/car-home1.PNG");
     background-repeat: no-repeat;
     background-attachment: fixed;  
     background-size: 100% 100%;
