--- a/location-size.css
+++ b/location-size.css
@@ -1,87 +1,110 @@
-html, body {
-    position:fixed;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-    background-image: url("./pics/car-home1.PNG");
-    background-repeat: no-repeat;
-    background-attachment: fixed;  
-    background-size: 100% 100%;
+html,
+body {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-image: url("./pics/car-home1.PNG");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
 }
-.center{
-    position: absolute;
-    top: 50%;
-    left: 700px;
-    transform: translate(0, -50%);
-    padding: 20px;
+.center {
+  position: absolute;
+  top: 50%;
+  left: 700px;
+  transform: translate(0, -50%);
+  padding: 20px;
 }
-.buttons-size{
-    border: none;
-    padding: 8px 16px 8px 16px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    margin: 10px 2px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-    width: 100px;
-    height:80px;
+.buttons-size {
+  border: none;
+  padding: 8px 16px 8px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 10px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  width: 100px;
+  height: 80px;
 }
-.radius-5{
-    border-radius: 5px;
+.radius-5 {
+  border-radius: 5px;
 }
-.nav-bar{
-    width: 100%;
-    height: 100px;
+.nav-bar {
+  width: 100%;
+  height: 100px;
 }
-.title-margins{
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 680px;
-    padding-top: 30px;
+.title-margins {
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 680px;
+  padding-top: 30px;
 }
-.sign-up-text-margins{
-    margin-top: 80px;
-    margin-bottom: 0;
-    margin-left: 960px;
-    padding-top: 30px;
-    display: inline-block;
+.sign-up-text-margins {
+  margin-top: 80px;
+  margin-bottom: 0;
+  margin-left: 960px;
+  padding-top: 30px;
+  display: inline-block;
 }
-.text-box{
-    width: 200px;
-    padding: 20px 20px;
-    margin-left: 40px;
-    margin-bottom: 10px;
-    border: 2px solid black;
-    border-radius: 5px;
+.text-box {
+  width: 200px;
+  padding: 20px 20px;
+  margin-left: 40px;
+  margin-bottom: 10px;
+  border: 2px solid black;
+  border-radius: 5px;
 }
-.login-text{
-	margin-left: 630px;
-	margin-bottom: 4px;
+.login-text {
+  margin-left: 630px;
+  margin-bottom: 4px;
 }
-.form-border{
-	width: 280px;
-	padding: 10px;
-	margin-left: 630px;
-	border: 5px solid black;
-	border-radius: 5px;
+.form-border {
+  width: 280px;
+  padding: 10px;
+  margin-left: 630px;
+  border: 5px solid black;
+  border-radius: 5px;
 }
-.word-margin{
-	margin-left: 100px;
+.word-margin {
+  margin-left: 100px;
 }
-.reg-button-size{
-    border: none;
-    padding: 8px 16px 8px 16px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    margin: 8px 10px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-    width: 100px;
-    height:50px;
+.reg-button-size {
+  border: none;
+  padding: 8px 16px 8px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 8px 10px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  width: 100px;
+  height: 50px;
 }
-.error-msg{
-	margin-left: 40%;
+.error-msg {
+  margin-left: 40%;
+}
+.center-form {
+  width: 280px;
+  padding: 10px;
+  margin-left: 630px;
+  border-radius: 20px;
+}
+.reg-textbox {
+  width: 100%;
+  padding: 1em;
+  margin-bottom: 10px;
+  line-height: 1.4;
+  border: 1px;
+  border-radius: 3px;
+}
+.date-textbox {
+  width: 50%;
+  padding: 0.5em;
+  margin-bottom: 10px;
+  line-height: 1.4;
+  border: 1px;
+  border-radius: 1.5px;
 }
