--- a/location-size.css
+++ b/location-size.css
@@ -37,10 +37,46 @@ body {
   width: 100%;
   height: 100px;
 }
+.item-bar {
+  width: 100%;
+  height: 50px;
+}
 .title-margins {
   margin-top: 0;
   margin-bottom: 0;
   left: 50%;
+  padding-top: 35px;
+}
+.item-margins {
+  padding-top: 15px;
+  padding-left: 20px;
+}
+.logout-margins {
+  position: absolute;
+  margin-top: 0;
+  margin-bottom: 0;
+  right: 40px;
+  padding-top: 35px;
+}
+.navbar-first {
+  position: absolute;
+  margin-top: 0;
+  margin-bottom: 0;
+  left: 40px;
+  padding-top: 35px;
+}
+.navbar-second {
+  position: absolute;
+  margin-top: 0;
+  margin-bottom: 0;
+  left: 120px;
+  padding-top: 35px;
+}
+.navbar-third {
+  position: absolute;
+  margin-top: 0;
+  margin-bottom: 0;
+  left: 260px;
   padding-top: 35px;
 }
 .sign-up-text-margins {
@@ -111,4 +147,9 @@ body {
   line-height: 1.4;
   border: 1px;
   border-radius: 1.5px;
+}
+.scrollbar {
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
 }
