--- a/Styles/location-size.css
+++ b/Styles/location-size.css
@@ -160,6 +160,18 @@ body {
   height: 80%;
   overflow: auto;
 }
-.small-textbox{
+.small-textbox {
   width: 50px;
+}
+.btn-link {
+  margin-top: 35px;
+  border: none;
+  outline: none;
+  background: none;
+  cursor: pointer;
+  color: #ffffff;
+  padding: 0;
+  font-family: inherit;
+  font-weight: bold;
+  font-size: 26px;
 }
