--- a/Styles/location-size.css
+++ b/Styles/location-size.css
@@ -175,3 +175,15 @@ body {
   font-weight: bold;
   font-size: 26px;
 }
+.payment-button-size {
+  border: none;
+  padding: 8px 16px 8px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 10px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  width: 150px;
+  height: 70px;
+}
